--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         <span class="text-object1-primary font-bold inline-flex items-center">
                             <!-- Phone Icon SVG (Lucide: Phone) -->
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-5 h-5 inline-block mr-1 align-middle"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.63A2 2 0 0 1 3.08 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
-                            [Your Phone Number Here]
+                            +971568722192
                         </span>
                     </p>
                     
@@ -175,7 +175,7 @@
                         <span class="text-object1-primary font-bold inline-flex items-center">
                             <!-- Instagram Icon SVG -->
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-5 h-5 inline-block mr-1 align-middle"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" x2="17.5" y1="6.5" y2="6.5"/></svg>
-                            @[Your Instagram Handle Here]
+                            @basemrealestatedxb
                         </span>
                     </p>
                 </div>
@@ -446,3 +446,4 @@
     </script>
 </body>
 </html>
+
