--- a/index.html
+++ b/index.html
@@ -133,17 +133,18 @@
             </div>
         </section>
         
-        <!-- NEW SECTION: Market Share Among Top Developers (After Chart 1) -->
+        <!-- UPDATED SECTION: Market Share Among Top Developers (After Chart 1) -->
         <section class="mb-12">
             <h2 class="text-3xl font-bold text-gray-800 mb-6 border-b-2 pb-3 text-center md:text-left">
                 <span class="text-object1-secondary">🏆</span> Market Share Snapshot: Top 20 Developers
             </h2>
             <div class="bg-white p-6 rounded-2xl shadow-2xl">
-                <div class="w-full h-72 bg-gray-200 flex items-center justify-center rounded-xl border-4 border-dashed border-object1-primary/50 overflow-hidden">
+                <!-- Changed to h-96 and updated placeholder image dimensions (800x600 is less wide) -->
+                <div class="w-full h-96 bg-gray-200 flex items-center justify-center rounded-xl border-4 border-dashed border-object1-primary/50 overflow-hidden">
                     <img 
-                        src="https://placehold.co/1200x400/4f46e5/ffffff?text=PLACEHOLDER+IMAGE%3A+Market+Share+Visual&font=Inter" 
+                        src="https://placehold.co/800x600/4f46e5/ffffff?text=PLACEHOLDER+IMAGE%3A+Market+Share+Visual&font=Inter" 
                         alt="Market Share among 20 Developers" 
-                        onerror="this.onerror=null; this.src='https://placehold.co/1200x400/4f46e5/ffffff?text=Failed+to+Load+Market+Share+Image'" 
+                        onerror="this.onerror=null; this.src='https://placehold.co/800x600/4f46e5/ffffff?text=Failed+to+Load+Market+Share+Image'" 
                         class="w-full h-full object-cover"
                     >
                 </div>
@@ -165,7 +166,7 @@
             </div>
         </section>
 
-        <!-- NEW SECTION: Location-Specific Performance Ranks (After Chart 2) -->
+        <!-- Location-Specific Performance Ranks (After Chart 2) -->
         <section class="mb-12">
             <h2 class="text-3xl font-bold text-gray-800 mb-6 border-b-2 pb-3 text-center md:text-left">
                 <span class="text-object1-primary">🎯</span> Local Dominance: Rank by Unit Sales in Key Communities
@@ -213,7 +214,7 @@
             </div>
         </section>
         
-        <!-- NEW SECTION: Investor Appreciation / Resale Transactions (After Chart 3) -->
+        <!-- Investor Appreciation / Resale Transactions (After Chart 3) -->
         <section class="mb-12">
             <h2 class="text-3xl font-bold text-gray-800 mb-6 border-b-2 pb-3 text-center md:text-left">
                 <span class="text-pink-500">💰</span> Resale Success: Documented Investor Appreciation
