--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <!-- Changed to h-96 and updated placeholder image dimensions (800x600 is less wide) -->
                 <div class="w-full h-96 bg-gray-200 flex items-center justify-center rounded-xl border-4 border-dashed border-object1-primary/50 overflow-hidden">
                     <img 
-                        src="https://placehold.co/800x600/4f46e5/ffffff?text=PLACEHOLDER+IMAGE%3A+Market+Share+Visual&font=Inter" 
+                        src="MS.png" 
                         alt="Market Share among 20 Developers" 
                         onerror="this.onerror=null; this.src='https://placehold.co/800x600/4f46e5/ffffff?text=Failed+to+Load+Market+Share+Image'" 
                         class="w-full h-full object-cover"
@@ -177,7 +177,7 @@
                     <h3 class="text-xl font-bold text-gray-700 mb-4 flex items-center"><span class="text-3xl mr-2 text-object1-success">#3</span> Top Developer in JVT</h3>
                     <div class="w-full h-64 bg-gray-200 flex items-center justify-center rounded-xl overflow-hidden">
                         <img 
-                            src="https://placehold.co/600x400/10b981/ffffff?text=JVT+RANK+%233+EVIDENCE&font=Inter" 
+                            src="JVT3" 
                             alt="Developer Rank #3 in JVT" 
                             onerror="this.onerror=null; this.src='https://placehold.co/600x400/10b981/ffffff?text=Failed+to+Load+JVT+Rank+Image'" 
                             class="w-full h-full object-cover"
@@ -191,7 +191,7 @@
                     <h3 class="text-xl font-bold text-gray-700 mb-4 flex items-center"><span class="text-3xl mr-2 text-object1-secondary">#6</span> Top Developer in JVC</h3>
                     <div class="w-full h-64 bg-gray-200 flex items-center justify-center rounded-xl overflow-hidden">
                         <img 
-                            src="https://placehold.co/600x400/f97316/ffffff?text=JVC+RANK+%236+EVIDENCE&font=Inter" 
+                            src="JVC6" 
                             alt="Developer Rank #6 in JVC" 
                             class="w-full h-full object-cover"
                         >
@@ -224,7 +224,7 @@
                 <div class="bg-white p-4 rounded-xl shadow-lg border-t-4 border-pink-500">
                     <div class="w-full h-40 bg-gray-200 flex items-center justify-center rounded-lg overflow-hidden mb-3">
                         <img 
-                            src="https://placehold.co/300x200/db2777/ffffff?text=RESALE+1+15%25+GAIN&font=Inter" 
+                            src="rs1.png" 
                             alt="Resale Transaction 1" 
                             class="w-full h-full object-cover"
                         >
@@ -236,7 +236,7 @@
                 <div class="bg-white p-4 rounded-xl shadow-lg border-t-4 border-pink-500">
                     <div class="w-full h-40 bg-gray-200 flex items-center justify-center rounded-lg overflow-hidden mb-3">
                         <img 
-                            src="https://placehold.co/300x200/db2777/ffffff?text=RESALE+2+18%25+GAIN&font=Inter" 
+                            src="rs2.png" 
                             alt="Resale Transaction 2" 
                             class="w-full h-full object-cover"
                         >
@@ -248,7 +248,7 @@
                 <div class="bg-white p-4 rounded-xl shadow-lg border-t-4 border-pink-500">
                     <div class="w-full h-40 bg-gray-200 flex items-center justify-center rounded-lg overflow-hidden mb-3">
                         <img 
-                            src="https://placehold.co/300x200/db2777/ffffff?text=RESALE+3+21%25+GAIN&font=Inter" 
+                            src="rs3.png" 
                             alt="Resale Transaction 3" 
                             class="w-full h-full object-cover"
                         >
@@ -260,7 +260,7 @@
                 <div class="bg-white p-4 rounded-xl shadow-lg border-t-4 border-pink-500">
                     <div class="w-full h-40 bg-gray-200 flex items-center justify-center rounded-lg overflow-hidden mb-3">
                         <img 
-                            src="https://placehold.co/300x200/db2777/ffffff?text=RESALE+4+13%25+GAIN&font=Inter" 
+                            src="rs4.png" 
                             alt="Resale Transaction 4" 
                             class="w-full h-full object-cover"
                         >
@@ -820,3 +820,4 @@
     </script>
 </body>
 </html>
+
