--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
                 <span class="text-object1-secondary">🏆</span> Market Share Snapshot: Top 20 Developers
             </h2>
             <div class="bg-white p-6 rounded-2xl shadow-2xl">
-                <!-- Changed to h-96 and updated placeholder image dimensions (800x600 is less wide) -->
-                <div class="w-full h-96 bg-gray-200 flex items-center justify-center rounded-xl border-4 border-dashed border-object1-primary/50 overflow-hidden">
+                <!-- Market Share Snapshot: Using aspect-square to force 1:1 ratio -->
+                <div class="w-full aspect-square bg-gray-200 flex items-center justify-center rounded-xl border-4 border-dashed border-object1-primary/50 overflow-hidden">
                     <img 
-                        src="MS.png" 
+                        src="https://placehold.co/600x600/4f46e5/ffffff?text=PLACEHOLDER+IMAGE%3A+Market+Share+Visual&font=Inter" 
                         alt="Market Share among 20 Developers" 
-                        onerror="this.onerror=null; this.src='https://placehold.co/800x600/4f46e5/ffffff?text=Failed+to+Load+Market+Share+Image'" 
+                        onerror="this.onerror=null; this.src='https://placehold.co/600x600/4f46e5/ffffff?text=Failed+to+Load+Market+Share+Image'" 
                         class="w-full h-full object-cover"
                     >
                 </div>
@@ -177,7 +177,7 @@
                     <h3 class="text-xl font-bold text-gray-700 mb-4 flex items-center"><span class="text-3xl mr-2 text-object1-success">#3</span> Top Developer in JVT</h3>
                     <div class="w-full h-64 bg-gray-200 flex items-center justify-center rounded-xl overflow-hidden">
                         <img 
-                            src="JVT3.png" 
+                            src="https://placehold.co/600x400/10b981/ffffff?text=JVT+RANK+%233+EVIDENCE&font=Inter" 
                             alt="Developer Rank #3 in JVT" 
                             onerror="this.onerror=null; this.src='https://placehold.co/600x400/10b981/ffffff?text=Failed+to+Load+JVT+Rank+Image'" 
                             class="w-full h-full object-cover"
@@ -191,7 +191,7 @@
                     <h3 class="text-xl font-bold text-gray-700 mb-4 flex items-center"><span class="text-3xl mr-2 text-object1-secondary">#6</span> Top Developer in JVC</h3>
                     <div class="w-full h-64 bg-gray-200 flex items-center justify-center rounded-xl overflow-hidden">
                         <img 
-                            src="JVC6.png" 
+                            src="https://placehold.co/600x400/f97316/ffffff?text=JVC+RANK+%236+EVIDENCE&font=Inter" 
                             alt="Developer Rank #6 in JVC" 
                             class="w-full h-full object-cover"
                         >
@@ -219,54 +219,59 @@
             <h2 class="text-3xl font-bold text-gray-800 mb-6 border-b-2 pb-3 text-center md:text-left">
                 <span class="text-pink-500">💰</span> Resale Success: Documented Investor Appreciation
             </h2>
-            <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
+            <!-- Resale Transactions: The container height remains h-48 as requested for bigger cards -->
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
                 <!-- Resale 1 -->
-                <div class="bg-white p-4 rounded-xl shadow-lg border-t-4 border-pink-500">
-                    <div class="w-full h-40 bg-gray-200 flex items-center justify-center rounded-lg overflow-hidden mb-3">
+                <div class="bg-white p-6 rounded-xl shadow-lg border-t-4 border-pink-500 hover:scale-[1.03] transition duration-300 transform">
+                    <!-- Increased height to h-48 -->
+                    <div class="w-full h-48 bg-gray-200 flex items-center justify-center rounded-lg overflow-hidden mb-3">
                         <img 
-                            src="rs1.png" 
+                            src="https://placehold.co/400x300/db2777/ffffff?text=RESALE+1+15%25+GAIN&font=Inter" 
                             alt="Resale Transaction 1" 
                             class="w-full h-full object-cover"
                         >
                     </div>
-                    <p class="text-lg font-bold text-pink-600">Transaction 1</p>
-                    <p class="text-sm text-gray-700 font-medium">Gain: 15% in 8 months</p>
+                    <p class="text-xl font-bold text-pink-600">Transaction 1</p>
+                    <p class="text-base text-gray-700 font-medium">Gain: 15% in 8 months</p>
                 </div>
                 <!-- Resale 2 -->
-                <div class="bg-white p-4 rounded-xl shadow-lg border-t-4 border-pink-500">
-                    <div class="w-full h-40 bg-gray-200 flex items-center justify-center rounded-lg overflow-hidden mb-3">
+                <div class="bg-white p-6 rounded-xl shadow-lg border-t-4 border-pink-500 hover:scale-[1.03] transition duration-300 transform">
+                    <!-- Increased height to h-48 -->
+                    <div class="w-full h-48 bg-gray-200 flex items-center justify-center rounded-lg overflow-hidden mb-3">
                         <img 
-                            src="rs2.png" 
+                            src="https://placehold.co/400x300/db2777/ffffff?text=RESALE+2+18%25+GAIN&font=Inter" 
                             alt="Resale Transaction 2" 
                             class="w-full h-full object-cover"
                         >
                     </div>
-                    <p class="text-lg font-bold text-pink-600">Transaction 2</p>
-                    <p class="text-sm text-gray-700 font-medium">Gain: 18% in 10 months</p>
+                    <p class="text-xl font-bold text-pink-600">Transaction 2</p>
+                    <p class="text-base text-gray-700 font-medium">Gain: 18% in 10 months</p>
                 </div>
                 <!-- Resale 3 -->
-                <div class="bg-white p-4 rounded-xl shadow-lg border-t-4 border-pink-500">
-                    <div class="w-full h-40 bg-gray-200 flex items-center justify-center rounded-lg overflow-hidden mb-3">
+                <div class="bg-white p-6 rounded-xl shadow-lg border-t-4 border-pink-500 hover:scale-[1.03] transition duration-300 transform">
+                    <!-- Increased height to h-48 -->
+                    <div class="w-full h-48 bg-gray-200 flex items-center justify-center rounded-lg overflow-hidden mb-3">
                         <img 
-                            src="rs3.png" 
+                            src="https://placehold.co/400x300/db2777/ffffff?text=RESALE+3+21%25+GAIN&font=Inter" 
                             alt="Resale Transaction 3" 
                             class="w-full h-full object-cover"
                         >
                     </div>
-                    <p class="text-lg font-bold text-pink-600">Transaction 3</p>
-                    <p class="text-sm text-gray-700 font-medium">Gain: 21% in 12 months</p>
+                    <p class="text-xl font-bold text-pink-600">Transaction 3</p>
+                    <p class="text-base text-gray-700 font-medium">Gain: 21% in 12 months</p>
                 </div>
                 <!-- Resale 4 -->
-                <div class="bg-white p-4 rounded-xl shadow-lg border-t-4 border-pink-500">
-                    <div class="w-full h-40 bg-gray-200 flex items-center justify-center rounded-lg overflow-hidden mb-3">
+                <div class="bg-white p-6 rounded-xl shadow-lg border-t-4 border-pink-500 hover:scale-[1.03] transition duration-300 transform">
+                    <!-- Increased height to h-48 -->
+                    <div class="w-full h-48 bg-gray-200 flex items-center justify-center rounded-lg overflow-hidden mb-3">
                         <img 
-                            src="rs4.png" 
+                            src="https://placehold.co/400x300/db2777/ffffff?text=RESALE+4+13%25+GAIN&font=Inter" 
                             alt="Resale Transaction 4" 
                             class="w-full h-full object-cover"
                         >
                     </div>
-                    <p class="text-lg font-bold text-pink-600">Transaction 4</p>
-                    <p class="text-sm text-gray-700 font-medium">Gain: 13% in 6 months</p>
+                    <p class="text-xl font-bold text-pink-600">Transaction 4</p>
+                    <p class="text-base text-gray-700 font-medium">Gain: 13% in 6 months</p>
                 </div>
             </div>
             <p class="text-sm text-gray-600 mt-4 text-center">These transactions demonstrate the strong immediate appreciation potential for investors in Object 1 properties.</p>
@@ -820,5 +825,3 @@
     </script>
 </body>
 </html>
-
-
