--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <!-- Market Share Snapshot: Using aspect-square to force 1:1 ratio -->
                 <div class="w-full aspect-square bg-gray-200 flex items-center justify-center rounded-xl border-4 border-dashed border-object1-primary/50 overflow-hidden">
                     <img 
-                        src="https://placehold.co/600x600/4f46e5/ffffff?text=PLACEHOLDER+IMAGE%3A+Market+Share+Visual&font=Inter" 
+                        src="MS.png" 
                         alt="Market Share among 20 Developers" 
                         onerror="this.onerror=null; this.src='https://placehold.co/600x600/4f46e5/ffffff?text=Failed+to+Load+Market+Share+Image'" 
                         class="w-full h-full object-cover"
@@ -825,3 +825,4 @@
     </script>
 </body>
 </html>
+
