--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     <h3 class="text-xl font-bold text-gray-700 mb-4 flex items-center"><span class="text-3xl mr-2 text-object1-success">#3</span> Top Developer in JVT</h3>
                     <div class="w-full h-64 bg-gray-200 flex items-center justify-center rounded-xl overflow-hidden">
                         <img 
-                            src="https://placehold.co/600x400/10b981/ffffff?text=JVT+RANK+%233+EVIDENCE&font=Inter" 
+                            src="JVT3.png" 
                             alt="Developer Rank #3 in JVT" 
                             onerror="this.onerror=null; this.src='https://placehold.co/600x400/10b981/ffffff?text=Failed+to+Load+JVT+Rank+Image'" 
                             class="w-full h-full object-contain" <!-- CHANGED: object-cover -> object-contain -->
@@ -191,7 +191,7 @@
                     <h3 class="text-xl font-bold text-gray-700 mb-4 flex items-center"><span class="text-3xl mr-2 text-object1-secondary">#6</span> Top Developer in JVC</h3>
                     <div class="w-full h-64 bg-gray-200 flex items-center justify-center rounded-xl overflow-hidden">
                         <img 
-                            src="https://placehold.co/600x400/f97316/ffffff?text=JVC+RANK+%236+EVIDENCE&font=Inter" 
+                            src="JVC6.png" 
                             alt="Developer Rank #6 in JVC" 
                             class="w-full h-full object-contain" <!-- CHANGED: object-cover -> object-contain -->
                         >
@@ -226,7 +226,7 @@
                     <!-- Increased height to h-48 -->
                     <div class="w-full h-48 bg-gray-200 flex items-center justify-center rounded-lg overflow-hidden mb-3">
                         <img 
-                            src="https://placehold.co/400x300/db2777/ffffff?text=RESALE+1+15%25+GAIN&font=Inter" 
+                            src="rs1.png" 
                             alt="Resale Transaction 1" 
                             class="w-full h-full object-cover"
                         >
@@ -239,7 +239,7 @@
                     <!-- Increased height to h-48 -->
                     <div class="w-full h-48 bg-gray-200 flex items-center justify-center rounded-lg overflow-hidden mb-3">
                         <img 
-                            src="https://placehold.co/400x300/db2777/ffffff?text=RESALE+2+18%25+GAIN&font=Inter" 
+                            src="rs2.png" 
                             alt="Resale Transaction 2" 
                             class="w-full h-full object-cover"
                         >
@@ -252,7 +252,7 @@
                     <!-- Increased height to h-48 -->
                     <div class="w-full h-48 bg-gray-200 flex items-center justify-center rounded-lg overflow-hidden mb-3">
                         <img 
-                            src="https://placehold.co/400x300/db2777/ffffff?text=RESALE+3+21%25+GAIN&font=Inter" 
+                            src="rs3.png" 
                             alt="Resale Transaction 3" 
                             class="w-full h-full object-cover"
                         >
@@ -265,7 +265,7 @@
                     <!-- Increased height to h-48 -->
                     <div class="w-full h-48 bg-gray-200 flex items-center justify-center rounded-lg overflow-hidden mb-3">
                         <img 
-                            src="https://placehold.co/400x300/db2777/ffffff?text=RESALE+4+13%25+GAIN&font=Inter" 
+                            src="rs4.png" 
                             alt="Resale Transaction 4" 
                             class="w-full h-full object-cover"
                         >
@@ -825,3 +825,4 @@
     </script>
 </body>
 </html>
+
