--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                     <img 
                         src="MS.png" 
                         alt="Market Share among 20 Developers" 
+                        onerror="this.onerror=null; this.src='https://placehold.co/600x600/4f46e5/ffffff?text=Failed+to+Load+Market+Share+Image'" 
                         class="w-full h-auto max-h-[30rem] object-contain"
                     >
                 </div>
@@ -179,7 +180,7 @@
                             src="JVT3.png" 
                             alt="Developer Rank #3 in JVT" 
                             onerror="this.onerror=null; this.src='https://placehold.co/600x400/10b981/ffffff?text=Failed+to+Load+JVT+Rank+Image'" 
-                            class="w-full h-full object-contain" <!-- CHANGED: object-cover -> object-contain -->
+                            class="w-full h-full object-cover"
                         >
                     </div>
                     <p class="text-sm text-gray-600 mt-4 text-center">Visual confirmation of Object 1's position as the third highest-selling developer by volume in Jumeirah Village Triangle.</p>
@@ -190,9 +191,9 @@
                     <h3 class="text-xl font-bold text-gray-700 mb-4 flex items-center"><span class="text-3xl mr-2 text-object1-secondary">#6</span> Top Developer in JVC</h3>
                     <div class="w-full h-64 bg-gray-200 flex items-center justify-center rounded-xl overflow-hidden">
                         <img 
-                            src="JVC6.png" 
+                            src="JVC.png" 
                             alt="Developer Rank #6 in JVC" 
-                            class="w-full h-full object-contain" <!-- CHANGED: object-cover -> object-contain -->
+                            class="w-full h-full object-cover"
                         >
                     </div>
                     <p class="text-sm text-gray-600 mt-4 text-center">Evidence confirming the sixth highest-selling developer by volume in the competitive Jumeirah Village Circle market.</p>
@@ -824,5 +825,3 @@
     </script>
 </body>
 </html>
-
-
