--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <h3 class="text-xl font-bold text-gray-700 mb-4 flex items-center"><span class="text-3xl mr-2 text-object1-secondary">#6</span> Top Developer in JVC</h3>
                     <div class="w-full h-64 bg-gray-200 flex items-center justify-center rounded-xl overflow-hidden">
                         <img 
-                            src="JVC.png" 
+                            src="JVC6.png" 
                             alt="Developer Rank #6 in JVC" 
                             class="w-full h-full object-cover"
                         >
@@ -825,3 +825,4 @@
     </script>
 </body>
 </html>
+
