--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                         >
                     </div>
                     <p class="text-xl font-bold text-pink-600">Transaction 3</p>
-                    <p class="text-base text-gray-700 font-medium">Gain: 1% in 24 months</p>
+                    <p class="text-base text-gray-700 font-medium">Current PSF: 2500 AED</p>
                 </div>
                 <!-- Resale 4 -->
                 <div class="bg-white p-6 rounded-xl shadow-lg border-t-4 border-pink-500 hover:scale-[1.03] transition duration-300 transform">
@@ -825,5 +825,6 @@
     </script>
 </body>
 </html>
+
 
 
